# ethz_piksi_ros

./: .gitignore
gnss_msgs/: CMakeLists.txt  package.xml
gnss_msgs/msg/: BaselinePosition.msg  BaselineVelocity.msg  GnssAlongTrackComponent.msg
message_converter/: CMakeLists.txt  package.xml
message_converter/include/message_converter/: converter_node.hpp
message_converter/launch/: conv_node.launch
message_converter/src/: converter_node.cpp
piksi_multi_cpp/launch/: base.launch  rover.launch
piksi_multi_cpp/src/observations/: udp_observation_sender.cc
piksi_multi_rtk_ros/: CMakeLists.txt  setup.py
piksi_multi_rtk_ros/launch/: fix_degradation.launch
piksi_multi_rtk_ros/src/piksi_multi_rtk_ros/: __init__.py  gnss_fix_degradation.py  piksi_multi.py
piksi_rtk_msgs/: CMakeLists.txt
piksi_rtk_msgs/srv/: DegradationLevel.srv
